--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_GOOGLE_CLIENT_ID = 90419309977-hu38e6c8354ll99qnruoqrgoh6423etp.apps.googleusercontent.com
 REACT_APP_GOOGLE_API_KEY = AIzaSyCIdNwJNgJdHjmoFnv8FMyOxzdS5TGgftk
 REACT_APP_MONGO_CONNECTION_STRING = mongodb+srv://admin:sdtnay@mongo-aris.gkowpja.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_SERVER_DOMAIN = http://localhost:5000
