--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-horizontal-scrolling": "^0.1.9",
+    "react-horizontal-scrolling-menu": "^3.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
